@@ -5,6 +5,7 @@ MANIFEST			This list of files
 MANIFEST.SKIP
 maps
 META.yml			Module meta-data (added by MakeMaker)
+perl-Gnome2-Rsvg.spec.in
 README
 Rsvg.pm
 rsvg2perl.c
