@@ -1,0 +1,60 @@
+Summary: Gnome2-Rsvg Perl module
+Name: perl-Gnome2-Rsvg
+Version: @VERSION@
+Release: 1
+Packager: gtk-perl-list@gnome.org
+License: LGPL
+Group: Development/Libraries
+URL: http://search.cpan.org/dist/Gnome2-Rsvg/
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
+BuildRequires: perl >= 2:5.8.0
+BuildRequires: librsvg2-devel >= @GNOME_RSVG@
+BuildRequires: perl-ExtUtils-Depends >= @PERL_EXTUTILS_DEPENDS@
+BuildRequires: perl-ExtUtils-PkgConfig >= @PERL_EXTUTILS_DEPENDS@
+BuildRequires: perl-Glib >= @PERL_GLIB@
+BuildRequires: perl-Gtk2 >= @PERL_GTK@
+Requires: librsvg2 >= @GNOME_RSVG_RUN@
+Requires: perl-Glib >= @PERL_GLIB@
+Requires: perl-Gtk2 >= @PERL_GTK@
+Requires: %(perl -MConfig -le 'if (defined $Config{useithreads}) { print "perl(:WITH_ITHREADS)" } else { print "perl(:WITHOUT_ITHREADS)" }')
+Requires: %(perl -MConfig -le 'if (defined $Config{usethreads}) { print "perl(:WITH_THREADS)" } else { print "perl(:WITHOUT_THREADS)" }')
+Requires: %(perl -MConfig -le 'if (defined $Config{uselargefiles}) { print "perl(:WITH_LARGEFILES)" } else { print "perl(:WITHOUT_LARGEFILES)" }')
+Source0: @SOURCE@
+
+%description
+%{summary}.
+
+%prep
+%setup -q -n Gnome2-Rsvg-%{version}
+
+%build
+CFLAGS="$RPM_OPT_FLAGS" perl Makefile.PL PREFIX=$RPM_BUILD_ROOT%{_prefix} 
+make OPTIMIZE="$RPM_OPT_FLAGS"
+make test
+
+%install
+rm -rf $RPM_BUILD_ROOT
+eval `perl '-V:installarchlib'`
+mkdir -p $RPM_BUILD_ROOT$installarchlib
+%makeinstall
+rm -f `find $RPM_BUILD_ROOT -type f -name perllocal.pod -o -name .packlist`
+
+[ -x %{_libdir}/rpm/brp-compress ] && %{_libdir}/rpm/brp-compress
+
+find $RPM_BUILD_ROOT%{_prefix} -type f -print | \
+	sed "s@^$RPM_BUILD_ROOT@@g" > %{name}-%{version}-%{release}-filelist
+if [ "$(cat %{name}-%{version}-%{release}-filelist)X" = "X" ] ; then
+    echo "ERROR: EMPTY FILE LIST"
+    exit 1
+fi
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%files -f %{name}-%{version}-%{release}-filelist
+%defattr(-,root,root,-)
+
+%changelog
+* @DATE@ gtk-perl-list@gnome.org - @VERSION@
+- Specfile autogenerated.
+
