@@ -1,3 +1,9 @@
+2004/01/02 15:09 (-0500) rwmcfa1
+
+	* Makefile.PL: rpm stuff added
+
+	* perl-Gnome2-Rsvg.spec.in: initial import
+
 2003/12/29 03:19 (+0100) kaffeetisch
 
 	* t/Rsvg.t
